infra/k8s/authenc-destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: authenc-mtls
  namespace: simpelv2
spec:
  host: authenc.simpelv2.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
